<?xml version="1.0"?>
<package>
  <name>aaf_music_player</name>
  <version>0.1.2</version>
  <description>The media player for AAF, working with general mp3 folders</description>

  <maintainer email="nilsbore@gmail.com">Nils Bore</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/strands-project/strands_deployment</url>

  <author email="nilsbore@gmail.com">Nils Bore</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>mary_tts</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-pygame</build_depend>
  <build_depend>pygame_managed_player</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>mary_tts</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pygame_managed_player</run_depend>
  
  <export/>
</package>
