<?xml version="1.0"?>
<package>
  <name>marathon_touch_gui</name>
  <version>0.0.1</version>
  <description>The marathon_touch_gui package</description>

  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_twitter_bootstrap</build_depend>
  <build_depend>strands_webtools</build_depend>
  <build_depend>strands_webserver</build_depend>
  <build_depend>ap_msgs</build_depend>  
  <run_depend>ros_twitter_bootstrap</run_depend>
  <run_depend>strands_webtools</run_depend>
  <run_depend>strands_webserver</run_depend>
  <run_depend>ap_msgs</run_depend>    

</package>