<?xml version="1.0"?>
<package>
    <name>nav_help_screen</name>
  <version>0.0.1</version>
  <description>The nav_help_screen package</description>

  <maintainer email="b.lacerda@cs.bham.ac.uk">Bruno Lacerda</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
  <build_depend>twitter_bootstrap</build_depend>
  <build_depend>strands_webtools</build_depend>
  <build_depend>strands_webserver</build_depend>
  <build_depend>human_help_manager</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>twitter_bootstrap</run_depend>
  <run_depend>strands_webtools</run_depend>
  <run_depend>strands_webserver</run_depend>
  <run_depend>human_help_manager</run_depend>    

</package>