<?xml version="1.0"?>
<package>
  <name>strands_webserver</name>
  <version>0.0.1</version>
  <description>The strands_webserver package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>
  <author email="c.j.c.burbridge@cs.bham.ac.uk">Chris Burbridge</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>strands_webtools</build_depend>
  <build_depend>ros_twitter_bootstrap</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>strands_webtools</run_depend>
  <run_depend>ros_twitter_bootstrap</run_depend>


</package>
